test/corpus/all-syntax.txt
===================
All syntax (so far)
===================

## Lovely

# variable declaration
foo :: 4; # constant
bar : Int = 4; # mutable

# functions
calc :: fun (~x: Int, ~y: Int) Int {
  z :: x / y;
  z^2
};

calc(foo, bar);

add :: fun (~num: Int, to other_num: Int) {
  num + other_num
};

add(3, to: 4);

returns_unit :: fun () {
  unit
}


---

(source_file
  (comment)
  (comment)
  (expression
    (variable_declaration
      (ident)
      (expression
        (int_literal))))
  (comment)
  (expression
    (variable_declaration
      (ident)
      (type
        (ident))
      (expression
        (int_literal))))
  (comment)
  (comment)
  (expression
    (variable_declaration
      (ident)
      (expression
        (function_expression
          (function_parameter
            (ident)
            (type
              (ident)))
          (function_parameter
            (ident)
            (type
              (ident)))
          (type
            (ident))
          (expression
            (variable_declaration
              (ident)
              (expression
                (infix_expression
                  (expression
                    (ident))
                  (expression
                    (ident))))))
          (expression
            (infix_expression
              (expression
                (ident))
              (expression
                (int_literal))))))))
  (expression
    (function_call
      (ident)
      (expression
        (ident))
      (expression
        (ident))))
  (expression
    (variable_declaration
      (ident)
      (expression
        (function_expression
          (function_parameter
            (ident)
            (type
              (ident)))
          (function_parameter
            (ident)
            (ident)
            (type
              (ident)))
          (expression
            (infix_expression
              (expression
                (ident))
              (expression
                (ident))))))))
  (expression
    (function_call
      (ident)
      (expression
        (int_literal))
      (ident)
      (expression
        (int_literal))))
  (expression
    (variable_declaration
      (ident)
      (expression
        (function_expression
          (expression
            (unit)))))))
